<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_escolher_tema"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batalhaagil.ufrpe.iversonluis.batalhaagil.DefinirOponente"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:background="@color/colorBackgroundInicial">



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:elevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logostart"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:id="@+id/titulo_escolher_tema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="28dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/tema"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Spinner
            android:id="@+id/spinner_tema"
            android:layout_gravity="center"
            android:gravity="center"
            android:dropDownSelector="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp">
        </Spinner>

        <TextView
            android:gravity="center"
            android:id="@+id/btn_desafiar_ai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_single_player"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_android"
            android:drawablePadding="10dp"
            android:textSize="30dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:gravity="center"
            android:id="@+id/btn_desafiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_procurar"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_bluetooth"
            android:drawablePadding="10dp"
            android:textSize="30dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:gravity="center"
            android:id="@+id/btn_desafiar_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_procurar_web"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_world"
            android:drawablePadding="10dp"
            android:textSize="30dp"
            android:textColor="@android:color/white"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </GridLayout>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
