<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:components="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_mapa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batalhaagil.ufrpe.iversonluis.batalhaagil.CreateMapa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/title_create_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:textSize="35dp"
                    android:gravity="center"
                    android:elevation="10dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/title_create_map"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true"      >

                       <!-- <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorTransparent"
                            android:src="@drawable/ic_rotate" />-->
                        <Button
                            android:id="@+id/btn_auto"
                            android:background="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/btn_auto" />
                        <Button
                            android:id="@+id/btn_next"
                            android:background="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/btn_next"/>
                    </LinearLayout>

                </RelativeLayout>



            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/battle3"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gridviewLinhas"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:numColumns="1"></GridView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
               <!-- <GridView
                    android:id="@+id/gridMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numColumns="10"
                    android:background="@drawable/background_grid"/>-->

                <GridLayout
                    android:id="@+id/gridMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_grid_original"
                    android:rowCount="10"
                    android:columnCount="10">

                </GridLayout>
                <GridView
                    android:id="@+id/gridviewColunas"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:numColumns="10"></GridView>

            </LinearLayout>

            <ImageView
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="110dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_height="100dp"
                android:src="@drawable/vez_p1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <!--<GridView
                    android:id="@+id/gridShips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numColumns="10"
                    android:background="@color/colorWhite"/>-->

                <GridLayout
                    android:id="@+id/gridShips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rowCount="10"
                    android:columnCount="10"/>

                <GridView
                    android:id="@+id/gridviewColunas2"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:numColumns="10"></GridView>
            </LinearLayout>

            <GridView
                android:id="@+id/gridviewLinhas2"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:numColumns="1"></GridView>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
